--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
+          POSTGRES_PASSWORD: password
           DB_PASSWORD: password
           DB_DATABASE: postgres
           DB_USERNAME: postgres
@@ -47,6 +48,10 @@ jobs:
           DB_HOST: localhost
           # The default PostgreSQL port
           DB_PORT: 5432
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
 
       - name: Check lint
         run: make lint
@@ -58,3 +63,7 @@ jobs:
           DB_HOST: localhost
           # The default PostgreSQL port
           DB_PORT: 5432
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
