--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,3 +74,7 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMAT }}
         with:
           coverageCommand: make test-coverage
+          DB_HOST: localhost
+          DB_PORT: 5432
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
