--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,3 +78,4 @@ jobs:
           POSTGRES_PORT: 5432
         with:
           coverageCommand: make test-coverage
+          coverageLocations: ${{github.workspace}}/storage/logs/test/junit.xml
