--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,8 @@ jobs:
       - name: Run tests covarage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMAT }}
+          CC_TEST_REPORTER_ID: bc32a559ee6cffcb36f99ab566144554e35dcb439c70986e28c14ba002a113a0
+#          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMAT }}
           DB_HOST: localhost
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
